--- a/exercises/00_compiling/host/Cargo.toml
+++ b/exercises/00_compiling/host/Cargo.toml
@@ -4,10 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-risc0-zkvm = { version = "1.0.0-rc.5" }
+risc0-zkvm = { version = "=1.0.0-rc.5" }
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = "1.0"
 anyhow = "1.0"
 
 [build-dependencies]
-risc0-build = "1.0.0-rc.5"
+risc0-build = "=1.0.0-rc.5"
