--- a/info.toml
+++ b/info.toml
@@ -7,3 +7,11 @@ mode = "risc0run"
 hint = """
 Remove the `I AM NOT DONE` comment in the `exercises/intro00/intro1.rs` file
 to move on to the next exercise."""
+
+[[exercises]]
+name = "test"
+path = "exercises/01_input"
+mode = "risc0run"
+hint = """
+Remove the `I AM NOT DONE` comment in the `exercises/intro00/intro1.rs` file
+to move on to the next exercise."""
