use shared build script

--- a/exercises/00_compiling/host/Cargo.toml
+++ b/exercises/00_compiling/host/Cargo.toml
@@ -2,6 +2,7 @@
 name = "host"
 version = "0.1.0"
 edition = "2021"
+build = "../../shared/build.rs"
 
 [dependencies]
 risc0-zkvm = { version = "=1.0.0-rc.5" }
