--- a/info.toml
+++ b/info.toml
@@ -17,3 +17,12 @@ Input can be sent to the guest through the `.write(..)` and `.write_slice(..)` m
 on the `ExecutorEnv` in the host.
 See https://dev.risczero.com/api/zkvm/tutorials/hello-world#step-2-host-share-private-data-as-input-with-the-guest
 for an example."""
+
+[[exercises]]
+name = "02_commit"
+path = "exercises/02_commit"
+mode = "risc0run"
+hint = """
+Data can be comitted to the journal from the guest. The most simple way is through `env::commit` and `env::commit_slice`.
+See https://dev.risczero.com/api/next/zkvm/tutorials/hello-world#step-3-guest-read-input-and-commit-output
+for an example."""
